Better styles in order to avoid overflows

--- a/SlackExporter/Styles.css
+++ b/SlackExporter/Styles.css
@@ -4,10 +4,12 @@
 }
 
 .messages {
-    /* max-width: 700px; */
-    text-align: left;
-    display: inline-block;
-	padding: 0px 50px;
+  /* max-width: 700px; */
+  text-align: left;
+  display: inline-block;
+  padding: 0px 50px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .messages .avatar {
@@ -174,6 +176,7 @@ pre.prettyprint {
   border: 1px solid rgba(0,0,0,.1);
   border-radius: 4px;
   background: #fff;
+  overflow: auto;
 }
 
 pre.prettyprint ol.linenums {
